--- a/src/app/pages/public/forgotpassword/forgotpassword.page.html
+++ b/src/app/pages/public/forgotpassword/forgotpassword.page.html
@@ -19,7 +19,7 @@
         <!-- form starts -->
         <form #loginform="ngForm" name="loginform" novalidate>
           <!-- for phone number input -->
-          <input type="text" name="phone" class="form-control" placeholder="Phone Number" maxlength="15" pattern="[+][0-9]+" autocomplete="off" style="border-bottom: 1px solid #979797 !important" required
+          <input type="text" name="phone" class="form-control" placeholder="Phone Number" minlength="10" maxlength="15" pattern="[+][0-9]+" autocomplete="off" style="border-bottom: 1px solid #979797 !important" required
             [ngClass]="{
             'is-invalid':phone.invalid  && submitted  ,'is-valid': phone.valid  && submitted }" #phone="ngModel"
             ngModel [(ngModel)]="loginObj.phone" />
@@ -41,7 +41,7 @@
           <svg preserveAspectRatio="none" viewBox="0 -0.5 267 1" class="line-1"></svg>
           <!-- for submit button -->
           <span class="notes">Enter the Mobile number you used to join </span><br>
-          <span class="notes">Envia Major.You will get a text with a one-time</span><br>
+          <span class="notes">Envia Mejor.You will get a text with a one-time</span><br>
           <span class="notes">reference code to reset your pincode</span>
           <svg preserveAspectRatio="none" viewBox="0 -0.5 267 1" class="line-1" ></svg>
           <button (click)="onSubmit(loginform)">Continue</button>
