--- a/src/app/pages/public/register/register.page.html
+++ b/src/app/pages/public/register/register.page.html
@@ -29,7 +29,7 @@
         <input class="inputs" id="registerInput3" type="text"  maxlength="1" autocomplete="off" class="inputs" />
         <input class="inputs" id="registerInput4" type="text"  maxlength="1" autocomplete="off" class="inputs"/>
         <p *ngIf="invalidOTP" style="color: red;text-align: -webkit-match-parent ;font-family: raleway_regular, Arial;"  >
-          <span id="registerInvalidOtp">Invalid OTP !</span>
+          <span id="registerInvalidOtp">Invalid new pincode !</span>
         </p>
       </form>
     
@@ -40,7 +40,7 @@
         <input class="inputs1" type="text" id="registerInputConf3"  maxlength="1" autocomplete="off" class="inputs1" />
         <input class="inputs1" type="text" id="registerInputConf4" maxlength="1" autocomplete="off"  class="inputs1"/>
         <p *ngIf="invalidConfOTP" style="color: red;text-align: -webkit-match-parent ;font-family: raleway_regular, Arial;"  >
-          <span id="registerInvalidOtpConf">Invalid OTP !</span>
+          <span id="registerInvalidOtpConf">Invalid confirm pincode !</span>
         </p>
       </form>
       <p class="pincode"  id="registerConfPin">Confirm pincode</p>
