--- a/src/app/pages/public/sendmoney/sendmoney.page.html
+++ b/src/app/pages/public/sendmoney/sendmoney.page.html
@@ -15,7 +15,7 @@
 <div style="background-color:white">
     <div class="row" style="overflow:auto;height:100%">
         <!-- <div class="columnHome"></div> -->
-        <div class="columnHome">
+        <div class="columnHome" *ngIf="sendMon">
             <p class="otherSet_Pro_New"><img src="assets/Icon material-arrow_back.png" alt="" align="top" style="cursor: pointer;"
                     (click)="home()">
                 &nbsp;
@@ -49,7 +49,7 @@
                                 <span class="tdLabel"> Phone Number</span>
                             </td>
                             <td style="width:55%">
-                                <input type="text" class="form-control" name="receiverPhoneNumber" placeholder="" autocomplete="off" maxlength="15" pattern="[+][0-9]+"
+                                <input type="text" class="form-control" name="receiverPhoneNumber" placeholder="" autocomplete="off" minlength="10" maxlength="15" pattern="[+][0-9]+"
                                     required [ngClass]="{'is-invalid': 
                                     receiverPhoneNumber.invalid  && submitted  ,'is-valid': receiverPhoneNumber.valid  && submitted }"
                                     #receiverPhoneNumber="ngModel" ngModel [(ngModel)]="sendMoney.receiverPhoneNumber" style="text-indent: 10px;font-size: 15.00px;font-weight: 400;font-style: normal;font-family: raleway_regular, Arial;border-right:0.5px solid #3C3C3C;border-left:0.5px solid #3C3C3C;border-top:0.5px solid #3C3C3C;border-radius: 10px;width: 95%;height: calc(1.4em +0.75rem);border-bottom:0.5px solid #3C3C3C !important">
@@ -138,9 +138,9 @@
                                     vendorAgentId.invalid  && submitted  ,'is-valid': vendorAgentId.valid  && submitted }"
                                     #vendorAgentId="ngModel" ngModel [(ngModel)]="sendMoney.vendorAgentId" style="text-indent: 10px;font-size: 15.00px;font-weight: 400;font-style: normal;font-family: raleway_regular, Arial;border-right:0.5px solid #3C3C3C;border-left:0.5px solid #3C3C3C;border-top:0.5px solid #3C3C3C;border-radius: 10px;width: 95%;height: calc(1.4em +0.75rem);border-bottom:0.5px solid #3C3C3C !important">
                                     <option hidden value="" disabled selected>Choose location </option>
-                                    <option value="swansons">Money Gram - Swansons </option>
+                                    <option value="Money Gram - Swansons">Money Gram - Swansons </option>
                                     <option value="bankaccount" disabled>830 RIVER ST,ADAK,AK 99546.</option>
-                                    <option value="walmart">Money Gram - Walmart</option>
+                                    <option value="Money Gram - Walmart">Money Gram - Walmart</option>
                                     <option value="bankaccount" disabled>2911 MILLBAY RD,KODIAK,AK 99615.2911 MILLBAY
                                         RD,KODIAK,AK 99615.</option>
                                 </select>
@@ -158,8 +158,8 @@
                                     deliveryBankName.invalid  && submitted  ,'is-valid': deliveryBankName.valid  && submitted }"
                                     #deliveryBankName="ngModel" ngModel [(ngModel)]="sendMoney.deliveryBankName" style="text-indent: 10px;font-size: 15.00px;font-weight: 400;font-style: normal;font-family: raleway_regular, Arial;border-right:0.5px solid #3C3C3C;border-left:0.5px solid #3C3C3C;border-top:0.5px solid #3C3C3C;border-radius: 10px;width: 95%;height: calc(1.4em +0.75rem);border-bottom:0.5px solid #3C3C3C !important">
                                     <option hidden value="" disabled selected>Choose bank </option>
-                                    <option value="bankaccount">Bank of America</option>
-                                    <option value="ccdc">Wells Fargo</option>
+                                    <option value="Bank of America">Bank of America</option>
+                                    <option value="Wells Fargo">Wells Fargo</option>
                                 </select>
                                 <show-error [control]="deliveryBankName" [label]="{'labelName': 'Bank Name'}"
                                 [submitFlag]="submitted"></show-error>
@@ -302,6 +302,135 @@
                         
             </div>
            </form>
+        </div>
+        <div class="columnHome" *ngIf="preview">
+            <p class="otherSet_Pro_New"><img src="assets/Icon material-arrow_back.png" alt="" align="top" style="cursor: pointer; "
+                    (click)="home()">
+                &nbsp;
+                <span>Send Money to {{" "+sendMoney.receiverName}}</span></p>
+                <div style="text-align: -webkit-center;">
+                    <div class="trans_1">
+                        <p class="insideRound"> {{getSplit(sendMoney.receiverName)}}</p>
+                    </div>
+                </div>
+                &nbsp;&nbsp;<label class="tdLabelConf" style="float:right;padding-right: 20px;">&nbsp;&nbsp;Edit</label><img style="float:right" src="assets/edit.png">
+                <br>
+            <table style="width: 100%;padding-left: 10px; padding-right: 10px;">
+                <tr (click)="transmission()">
+                    <td class="transmission" style="text-align: left !important">
+                        <label class="head_amt" ><span style="visibility:hidden">ts</span>Receiver
+                            Information</label>
+                    </td>
+                </tr>
+            </table>
+            <div id="viewpg" class="sendConf">
+                <table style="width:100%">
+                    <tr class="trspace_tran">
+                        <td style="width:45%;padding-left: 10px;">
+                            <span class="tdLabelConf"> Pay To</span>
+                        </td>
+                        <td style="width:55%">
+                            <span class="tdDataConf"> {{" "+sendMoney.receiverName}}</span>
+                        </td>
+                    </tr>
+                    <tr class="trspace_tran">
+                        <td style="width:45%;padding-left: 10px;">
+                            <span class="tdLabelConf"> Country</span>
+                        </td>
+                        <td style="width:55%">
+                            <span class="tdDataConf"> {{" "+sendMoney.receiverCountry}}</span>
+                        </td>
+                    </tr>
+                    <tr class="trspace_tran">
+                        <td style="width:45%;padding-left: 10px;">
+                            <span class="tdLabelConf"> Mobile Number</span>
+                        </td>
+                        <td style="width:55%">
+                            <span class="tdDataConf">{{" "+sendMoney.receiverPhoneNumber}}</span>
+                        </td>
+                    </tr>
+                    <tr class="trspace_tran">
+                        <td style="width:45%;padding-left: 10px;">
+                            <span class="tdLabelConf">Vendor</span>
+                        </td>
+                        <td style="width:55%">
+                            <span class="tdDataConf">{{" "+sendMoney.vendorId}}</span>
+                        </td>
+                    </tr>
+                    <tr class="trspace_tran">
+                        <td style="width:45%;padding-left: 10px;">
+                            <span class="tdLabelConf">Delivery Method</span>
+                        </td>
+                        <td style="width:55%">
+                            <span class="tdDataConf">{{" "+sendMoney.deliveryMethod}}</span>
+                        </td>
+                    </tr>
+                    <tr class="trspace_tran">
+                        <td style="width:45%;padding-left: 10px;">
+                            <span class="tdLabelConf"> Address</span>
+                        </td>
+                        <td style="width:55%">
+                            <span class="tdDataConf">830,River Street</span>
+                            <span class="tdDataConf">Adak, Alaska</span>
+                            <span class="tdDataConf">830,River Street</span>
+                            <span class="tdDataConf">99546</span>
+                        </td>
+                    </tr>
+                </table>
+            </div>
+            <br>
+            <table style="width: 100%;padding-left: 10px; padding-right: 10px;">
+                    <tr (click)="transmission()">
+                        <td class="transmission" style="text-align: left !important">
+                            <label class="head_amt"><span style="visibility:hidden">ts</span>Transmission
+                                Information</label>
+                        </td>
+                    </tr>
+                </table>
+            <div class="sendConf">
+                <table style="width:100%">
+                    <tr class="trspace_tran">
+                        <td style="width:45%;padding-left: 10px;">
+                            <span class="tdLabelConf"> Amount</span>
+                        </td>
+                        <td style="width:55%">
+                            <span class="tdDataConf">{{" "+sendMoney.transactionAmount}}</span>
+                        </td>
+                    </tr>
+                    <tr class="trspace_tran">
+                        <td style="width:45%;padding-left: 10px;">
+                            <span class="tdLabelConf"> Payment Method</span>
+                        </td>
+                        <td style="width:55%">
+                            <span class="tdDataConf">{{" "+sendMoney.paymentMethod}}</span>
+                        </td>
+                    </tr>
+                    <tr class="trspace_tran">
+                        <td style="width:45%;padding-left: 10px;">
+                            <span class="tdLabelConf">Total Fee</span>
+                        </td>
+                        <td style="width:55%">
+                            <span class="tdDataConf">31.00 USD</span>
+                        </td>
+                    </tr>
+                    <tr class="trspace_tran">
+                        <td style="width:45%;padding-left: 10px;">
+                            <span class="tdLabelConf">Total Amount</span>
+                        </td>
+                        <td style="width:55%">
+                            <span class="tdDataConf">{{" "+sendMoney.transactionTotalAmount}}</span>
+                        </td>
+                    </tr>
+                    <br>
+
+                </table>
+                <div style="text-align: center;margin-top: 10px;">
+                        <button  class="nextbtn !important" style="width: 125.00px;height: 40.12px !important" (click)="onSendClick()">Send</button>
+                        </div>
+                        <br>
+            </div>
+
+
         </div>
         <!-- <div class="columnHome"></div> -->
     </div>
