--- a/src/app/pages/public/transactions/transactions.page.html
+++ b/src/app/pages/public/transactions/transactions.page.html
@@ -49,7 +49,7 @@
                         <img src="assets/us.png" alt="" align="middle" height="25" width="25" style="margin-right: 10px;">
                     </div>
                     <div style="margin-left: 10px;width:20%">
-                        <span class="amount">{{val.totalAmountSentToReceiver}}</span>
+                        <span class="amount"><b>$</b> {{val.totalAmountSentToReceiver}}</span>
                         <span class="amount2">{{val.transactionStatus}}</span>
                     </div>
                     <div style="width:5%">
