--- a/src/app/pages/public/sendmessage/sendmessage.page.html
+++ b/src/app/pages/public/sendmessage/sendmessage.page.html
@@ -2,7 +2,7 @@
     <div class="row" style="overflow:auto;height:100%">
         <!-- <div class="columnHome"></div> -->
         <div class="columnHome">
-            <p class="otherSet_Pro_New"><img src="assets/Icon material-arrow_back.png" alt="" align="top" style="cursor: pointer;" (click)="sendmoney()">
+            <p class="otherSet_Pro_New"><img src="assets/Icon material-arrow_back.png" alt="" align="top" style="cursor: pointer;" (click)="msgGo()">
                 &nbsp;Send Message</p>
             <p style="float: right;">
                 <button  class="history" (click)="getHistory()">History</button>&nbsp;
@@ -10,46 +10,57 @@
             </p>
             <div class="clear"></div>
             <div><br><br><p></p></div>
-            <div id="viewpg" class="sendMesg">
-              <table style="width:100%" >
-                    <tr class="trspace">
-                        <td style="width:10%;padding-left: 10px;">
-                            <span class="tdLabelConf">To</span>
-                        </td>
-                        <td style="width:55%">
-                            <span class="tdDataConf"> Eric Thomson</span>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td colspan="2">
-                            <hr class="hr" style="border-color: #ced4da;margin-left: 0;margin-right: 0  !important">
-                        </td>
-                    </tr> 
-                    <tr class="trspace">
-                            <td colspan="2">
-                                <div class="divMsg">
-                                    <p class="msg">
-                                  Hi Eric I had transferred $3800 .
-                            </p>
-                                </div>
-                            </td>
-                        </tr>
-                        <tr class="trspace" style="text-align: right !important">
-                                <td colspan="2">
-                                        <div style="margin-left: 10px;margin-right:10px;;border-radius: 19px;">
-                                             <label class="sent">
-                                                 Message sent successfully
-                                             </label>
-                                        </div>
-                                   
-                                       
-                                </td>
-                            </tr>
-                </table> 
-            </div>
-            <div  style="text-align: center;margin-top: 30px;">
-                <button  class="nextbtn !important" (click)="onClickSend()">Send</button>
-            </div>
+            <form #sendMoneyForm="ngForm" name="sendMoneyForm" novalidate>
+                    <div id="viewpg" class="sendMesg">
+                            <table style="width:100%" >
+                                  <tr class="trspace">
+                                      <td style="width:10%;padding-left: 10px;">
+                                          <span class="tdLabelConf">To</span>
+                                      </td>
+                                      <td style="width:55%">
+                                          <span class="tdDataConf"> {{name}}</span>
+                                      </td>
+                                  </tr>
+                                  <tr>
+                                      <td colspan="2">
+                                          <hr class="hr" style="border-color: #ced4da;margin-left: 0;margin-right: 0  !important">
+                                      </td>
+                                  </tr> 
+                                  <tr class="trspace">
+                                          <td colspan="2" >
+                                              <div  [hidden]="sent">
+                                                 <input type="text" class="divMsg" style="width: 85%;border: 1px solid lightgray !important" name="message" required [ngClass]="{'is-invalid': 
+                                                 message.invalid  && submitted  ,'is-valid': message.valid  && submitted }"
+                                                     #message="ngModel" ngModel [(ngModel)]="msg.message">
+                                                     <show-error [control]="message" [label]="{'labelName': 'Message'}"
+                                                      [submitFlag]="submitted"></show-error>
+                                              </div>
+                                              <div class="divMsg" *ngIf="sent">
+                                                  <p class="msg">
+                                              {{msg.message}}
+                                          </p>
+                                              </div>
+                                          </td>
+                                      </tr>
+                                      <tr class="trspace" style="text-align: right !important" *ngIf="sent">
+                                              <td colspan="2">
+                                                      <div style="margin-left: 10px;margin-right:10px;;border-radius: 19px;">
+                                                           <label class="sent">
+                                                               Message sent successfully
+                                                           </label>
+                                                      </div>
+                                                 
+                                                     
+                                              </td>
+                                          </tr>
+                              </table> 
+                          </div>
+                          <div  style="text-align: center;margin-top: 30px;">
+                                <button  class="nextbtn !important" (click)="onClickSend(sendMoneyForm)">Send</button>
+                            </div>
+            </form>
+            
+           
         </div>
         <!-- <div class="columnHome"></div> -->
     </div>
