--- a/src/app/pages/public/transactions/transactions.page.html
+++ b/src/app/pages/public/transactions/transactions.page.html
@@ -1,13 +1,13 @@
 <div style="background-color:white">
     <div class="row" style="overflow:auto;height:100%">
         <!-- <div class="columnHome"></div> -->
-        <div class="columnHome">
+        <div class="columnHome"  [hidden]="!list">
                 <div id="mySidenav" class="sidenav" *ngIf="openNavBar">
                         <span style="margin-top:10px;"><img src="assets/metro-home.png" style="cursor: pointer;" alt="" width="18"
                                 height="18" align="top" (click)="home()"><label class="margin20" (click)="home()">Home</label></span>
                         <hr class="hr">
                         <span><img src="assets/paper-plane.png" style="cursor: pointer;" alt="" width="18" height="18" align="top"
-                                (click)="sendMoney()"><label class="margin20" (click)="sendMoney()">Send Money</label></span>
+                                (click)="sendMoneyObj()"><label class="margin20" (click)="sendMoney()">Send Money</label></span>
                         <hr class="hr">
                         <span><img src="assets/transaction.png" style="cursor: pointer;" alt="" width="18" height="18" align="top"
                                 (click)="transaction()"><label class="margin20" (click)="transaction()">Transactions</label></span>
@@ -35,7 +35,7 @@
             <div>
             <div *ngFor="let val of dt.resultArr">
                
-                <div class="row" style="margin-top: 12px;">
+                <div class="row" style="margin-top: 12px;" (click)="viewDetails(val)">
                     <div style="width:12%">
                         <div class="trans">
                             <p class="rounded">{{getSplit(val.receiverName)}}</p>
@@ -49,7 +49,7 @@
                         <img src="assets/us.png" alt="" align="middle" height="25" width="25" style="margin-right: 10px;">
                     </div>
                     <div style="margin-left: 10px;width:20%">
-                        <span class="amount"><b>$</b> {{val.totalAmountSentToReceiver}}</span>
+                        <span class="amount"><b>$</b> {{val.transactionTotalAmount}}</span>
                         <span class="amount2">{{val.transactionStatus}}</span>
                     </div>
                     <div style="width:5%">
@@ -174,5 +174,129 @@
             </div> -->
         </div>
         <!-- <div class="columnHome"></div> -->
+    </div>
+    <div class="columnHome"  [hidden]="!confirmation">
+                <p class="otherSet_Pro_New"><img src="assets/Icon material-arrow_back.png" alt="" align="top" style="cursor: pointer;padding-top: 3px;" (click)="transactions()">
+                    &nbsp;
+                    Transaction Details</p>
+            <div style="text-align: -webkit-center;">
+                <div class="trans_1">
+                    <p class="insideRound"> {{getSplit(sendMoneyObj.receiverName)}}</p>
+                </div>
+            </div>
+            <div style="text-align: -webkit-center;">
+                    <label class="head_amt" style="text-align: center;">${{" "+sendMoneyObj.transactionTotalAmount}} </label>
+                </div>
+            <br>
+        <div id="viewpg" class="sendConf">
+            <table style="width:100%">
+                <tr class="trspace_tran">
+                    <td style="width:45%;padding-left: 10px;">
+                        <span class="tdLabelConf"> Paid To</span>
+                    </td>
+                    <td style="width:55%">
+                        <span class="tdDataConf">  {{sendMoneyObj.receiverName}}</span>
+                    </td>
+                    <td >
+                        <span class="tdDataConf" *ngIf="sendMoneyObj.receiverCountry =='USA'">  <img src="assets/united-states-1.png" style="margin: -2px;"></span>
+                        <span class="tdDataConf" *ngIf="sendMoneyObj.receiverCountry =='Mexico'">  <img src="assets/mexico.png" style="margin: -2px;"></span>
+                    </td>
+                </tr>
+                <!-- <tr class="trspace_tran">
+                    <td style="width:45%;padding-left: 10px;">
+                        <span class="tdLabelConf"> Date</span>
+                    </td>
+                    <td style="width:55%">
+                        <span class="tdDataConf">  {{name ? name  : sendMoneyObj.receiverName}}</span>
+                    </td>
+                </tr> -->
+                <tr class="trspace_tran">
+                    <td style="width:45%;padding-left: 10px;">
+                        <span class="tdLabelConf"> Country</span>
+                    </td>
+                    <td style="width:55%" colspan="2">
+                        <span class="tdDataConf"> {{" "+sendMoneyObj.receiverCountry}}</span>
+                    </td>
+                </tr>
+                <tr class="trspace_tran">
+                    <td style="width:45%;padding-left: 10px;">
+                        <span class="tdLabelConf"> Mobile Number</span>
+                    </td>
+                    <td style="width:55%">
+                        <span class="tdDataConf">{{" "+sendMoneyObj.receiverPhoneNumber}}</span>
+                    </td>
+                </tr>
+                <tr class="trspace_tran">
+                    <td style="width:45%;padding-left: 10px;">
+                        <span class="tdLabelConf">Vendor</span>
+                    </td>
+                    <td style="width:55%">
+                        <span class="tdDataConf">{{" "+(sendMoneyObj.vendorName)}}</span>
+                    </td>
+                </tr>
+                <tr class="trspace_tran">
+                    <td style="width:45%;padding-left: 10px;">
+                        <span class="tdLabelConf">Delivery Method</span>
+                    </td>
+                    <td style="width:55%">
+                        <span class="tdDataConf">{{" "+sendMoneyObj.deliveryMethod}}</span>
+                    </td>
+                </tr>
+                <!-- <tr class="trspace_tran">
+                    <td style="width:45%;padding-left: 10px;">
+                        <span class="tdLabelConf"> Address</span>
+                    </td>
+                    <td style="width:55%">
+                        <span class="tdDataConf">830,River Street</span>
+                        <span class="tdDataConf">Adak, Alaska</span>
+                        <span class="tdDataConf">830,River Street</span>
+                        <span class="tdDataConf">99546</span>
+                    </td>
+                </tr> -->
+            </table>
+        </div>
+        <br>
+       
+        <div class="sendConf">
+            <table style="width:100%">
+                <tr class="trspace_tran">
+                    <td style="width:45%;padding-left: 10px;">
+                        <span class="tdLabelConf"> Amount</span>
+                    </td>
+                    <td style="width:55%">
+                        <span class="tdDataConf">{{" "+sendMoneyObj.transactionAmount}} USD</span>
+                    </td>
+                </tr>
+                <tr class="trspace_tran">
+                    <td style="width:45%;padding-left: 10px;">
+                        <span class="tdLabelConf"> Payment Method</span>
+                    </td>
+                    <td style="width:55%">
+                        <span class="tdDataConf">{{" "+(sendMoneyObj.paymentMethod)}}</span>
+                    </td>
+                </tr>
+                <tr class="trspace_tran">
+                    <td style="width:45%;padding-left: 10px;">
+                        <span class="tdLabelConf">Total Fee</span>
+                    </td>
+                    <td style="width:55%">
+                        <span class="tdDataConf">{{sendMoneyObj.totalFee}} USD</span>
+                    </td>
+                </tr>
+                <tr class="trspace_tran">
+                    <td style="width:45%;padding-left: 10px;">
+                        <span class="tdLabelConf">Total Amount</span>
+                    </td>
+                    <td style="width:55%">
+                        <span class="tdDataConf">{{" "+sendMoneyObj.transactionTotalAmount}} USD</span>
+                    </td>
+                </tr>
+                <br>
+
+            </table>
+           
+        </div>
+       
+
     </div>
 </div>
